# metadatviewer

./: .gitignore  NEWS.md  README.md  io.github.sondalex.MetaDatViewer.json  meson.build
data/: io.github.sondalex.MetaDatViewer.appdata.xml.in  io.github.sondalex.MetaDatViewer.desktop.in  io.github.sondalex.MetaDatViewer.gschema.xml  io.github.sondalex.MetaDatViewer.mimetype.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  metadatviewer.gresource.xml  metadatviewer.in  window.py  window.ui
tests/fixtures/: data.dta
